Started backend cleanup: entities and DTOs done